<resources>
    <string name="app_name">HealthCare App</string>
    <string name="transforming">Transforming</string>
    <string name="healthcare">HealthCare</string>
    <string name="InnerCircle">N0.1</string>
    <string name="description">Description</string>
    <string name="Purpose1">The purpose of Life is to</string>
    <string name="Purpose2">find joy and fulfillment</string>
    <string name="Terms">Tap to accept Terms and Privacy</string>
    <string name="GetStarted">Get Started</string>
    <string name="Error">Accept Terms and Conditions to Continue</string>
    <string name="Login1">Login To</string>
    <string name="Login2">Your Account</string>
    <string name="Username">UserName</string>
    <string name="Password">Password</string>
    <string name="Forgot">Forget Password</string>
    <string name="Remember">Remember Me</string>
    <string name="Login">Log In</string>
    <string name="Google">Google</string>
    <string name="FaceBook">Facebook</string>
    <string name="Do_notHave">Do not have an account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="OR">OR</string>
    <string name="SignUp1">Get Started Now</string>
    <string name="SignUp2">Create an account or log in to explore about our app</string>
    <string name="VerifyPassword">Verify Password</string>
    <string name="Already_have">Already have an account</string>
    <string name="YourStatistics">Your Statistics</string>
    <string name="ThisWeek">This Week</string>
    <string name="VisitType">Visit Type</string>
    <string name="SeeMore">See More</string>
    <string name="All">All</string>
    <string name="Years">Year</string>
    <string name="Months">Months</string>
    <string name="Days">Days</string>
    <string name="Weeks">Weeks</string>
    <string name="Tickets">Tickets</string>
    <string name="Plans">Plans</string>
    <string name="Drugs">Drugs</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="create_account">Create Account</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="account">account</string>
    <string name="doctorimg">DoctorImg</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="specialization">Specialization</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="online">Online</string>
    <string name="_2025">2025</string>
    <string name="my_appointments">My Appointments</string>
    <string name="callicon">CallIcon</string>
    <string name="chaticon">ChatIcon</string>
    <string name="tick">Tick</string>
    <string name="_300">300$</string>
    <string name="per_session">per Session</string>
    <string name="schedule">Schedule</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="education">Education</string>
    <string name="register_as_doctor">Register as Doctor</string>
    <string name="register_as_patient">Register as Patient</string>
    <string name="specialization_in_years">Specialization (In Years)</string>
    <string name="fee_per_session">Fee Per Session</string>
    <string name="phone">Phone</string>
    <string name="current_hospital_name">Current Hospital Name</string>
    <string name="experience_in_years">Experience (in Years)</string>
    <string name="personal_information">Personal Information</string>
    <string name="work_info">Work Info</string>
    <string name="degrees">Degrees</string>
    <string name="add_degree">Add Degree</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="account_information">Account Information</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="last_message">Last message...</string>
    <string name="_12_00">12:00</string>
    <string name="type_a_message">Type a message</string>
    <string name="book_appointments">Book Appointments</string>
    <string name="slot">Slot</string>
    <string name="cancel">Cancel</string>
    <string name="chats">Chats</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="statistics_input">Statistics Input</string>
    <string name="value">Value</string>
    <string name="select_stats">Select Stats:</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="pulse">Pulse</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="defualt_entry">Defualt Entry</string>
    <string name="enter">Enter</string>
    <string name="patient_name">Patient Name</string>
    <string name="gender">gender</string>
    <string name="median">Median</string>
    <string name="mode">Mode</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="weight">Weight</string>
    <string name="water_intake">Water Intake</string>
    <string name="sleep">Sleep</string>
    <string name="weight_in_kg">Weight (in Kg)</string>
    <string name="cardiology">Cardiology</string>
    <string name="log_out">Log Out</string>
</resources>