<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/DarkBlue"
    android:padding="24dp"
    tools:context=".Doctors.DoctorProfileFragment">

    <TextView
        android:id="@+id/tvDoctorProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDoctorProfile"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/tvPhoneNo"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:text="@string/phone_no"
        />

    <TextView
        android:id="@+id/tvEducation"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNo"
        android:text="@string/education"
        />

    <TextView
        android:id="@+id/tvExperience"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEducation"
        android:text="@string/experience_in_years"
        />

    <TextView
        android:id="@+id/tvHospital"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvExperience"
        android:text="@string/hospital_name"
        />

    <TextView
        android:id="@+id/tvFees"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHospital"
        android:text="@string/fee_per_session"
        />

</androidx.constraintlayout.widget.ConstraintLayout>