<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue"
    android:padding="24dp"
    tools:context=".Home.PatientProfileActivity">

    <TextView
        android:id="@+id/tvPatientProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPatientProfile"
        android:background="@drawable/roundededittext"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/tvPhoneNo"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:background="@drawable/roundededittext"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:text="@string/phone_no"
        />

    <TextView
        android:id="@+id/tvGender"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundededittext"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNo"
        android:text="@string/gender"
        />

    <TextView
        android:id="@+id/tvAge"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundededittext"
        app:layout_constraintTop_toBottomOf="@+id/tvGender"
        android:text="@string/age"
        />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundededittext"
        app:layout_constraintTop_toBottomOf="@id/tvAge"
        android:text="@string/address"
        />

    <Button
        android:id="@+id/btnPatientLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:backgroundTint="@color/Red"
        />

</androidx.constraintlayout.widget.ConstraintLayout>