<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue"
    tools:context=".Stats.StatsInput">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/statistics_input"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/select_stats"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/manual_entry"/>

        <RadioButton
            android:id="@+id/radioDefualt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/defualt_entry"/>
    </RadioGroup>

    <TimePicker
        android:id="@+id/timePickerManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTime"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/select_stats"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/timePickerManual"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroupStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvStats"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/heart_rate"/>

        <RadioButton
            android:id="@+id/radioPulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/pulse"/>
        <RadioButton
            android:id="@+id/radioBloosPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/blood_pressure"/>
    </RadioGroup>

    <EditText
        android:id="@+id/etValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundededittext"
        android:hint="@string/value"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/radioGroupStats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etValue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="24dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:backgroundTint="@color/Grey"
        />

</androidx.constraintlayout.widget.ConstraintLayout>