<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Auth.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvPersonalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/personal_information"
            android:textColor="@color/black"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundededittext"
            android:hint="@string/name"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvPersonalInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/select_gender"
            android:textColor="@color/black"
            android:padding="8dp"
            android:textSize="18sp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvGender"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundededittext"
            android:hint="@string/age"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etPhoneNo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundededittext"
            android:hint="@string/phone_no"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/etAge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundededittext"
            android:hint="@string/address"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/etPhoneNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvAccountInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/account_information"
            android:textColor="@color/black"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/etAddress"
            app:layout_constraintStart_toStartOf="parent"/>


        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/roundededittext"
            android:hint="@string/Username"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvAccountInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundededittext"
            android:hint="@string/Password"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/etUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etVerifyPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundededittext"
            android:hint="@string/VerifyPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/SignUp"
            android:textColor="@color/white"
            android:backgroundTint="@color/innerFill"
            app:cornerRadius="25dp"
            app:layout_constraintTop_toBottomOf="@id/etVerifyPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/llOr"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/innerFill"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OR"
                android:textColor="@color/innerFill"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/innerFill"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleSignIn"
            app:layout_constraintTop_toBottomOf="@id/llOr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/whiteshadecard"
            android:text="@string/continue_with_google"
            android:textColor="@color/black"
            app:icon="@drawable/google_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"
            android:strokeColor="@color/midRing"
            app:cornerRadius="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFaceBookSignIn"
            app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/whiteshadecard"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/black"
            app:icon="@drawable/facebook_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"
            android:strokeColor="@color/midRing"
            app:cornerRadius="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>