<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:backgroundTint="@color/GridCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <ImageView
            android:id="@+id/ivDoctor"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/doctorimg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/ivDoctor"
            app:layout_constraintTop_toTopOf="@id/ivDoctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivDoctor"/>

        <TextView
            android:id="@+id/tvBookedSlot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/slot"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/ivDoctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivDoctor"/>

        <TextView
            android:id="@+id/tvSpecialization"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/specialization"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/ivDoctor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvHospital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hospital_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvSpecialization"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvHospital"
            android:backgroundTint="@color/Red"
            android:text="@string/cancel"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:id="@+id/actionButtonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@+id/btnCancel"
            app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
            app:layout_constraintRight_toRightOf="@id/cvGrid">

            <ImageView
                android:id="@+id/ivChat"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/chat"
                android:contentDescription="@string/chaticon"
                android:layout_marginEnd="12dp"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivCall"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/call"
                android:contentDescription="@string/callicon"
                app:tint="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
